Workaround functional test failures on JDK 22